--- a/src/app/pass-calc/pass-calc.component.html
+++ b/src/app/pass-calc/pass-calc.component.html
@@ -16,8 +16,22 @@
     </form>
   </div>
   <div *ngIf="timeToBreak" class="col-md-6 col-md-offset-3">
-    If you began attacking this password <i>right now</i>, it would take 
-      <br><h3>{{successMsg}}</h3><br> 
-    to complete the attack.
+    If you began attacking this password <i>right now</i>, your password would be guessed in...
+      <br><h2>{{successMsg}}</h2><br> 
+
+    <h4>THINGS YOU DID RIGHT</h4>
+    <ul class="list-unstyled">
+      <li style="padding-left:2em" *ngFor="let test of goodPassTests">
+        <p *ngIf="test.status == true">{{test.title}}    &#10004;</p>
+      </li>
+    </ul>
+    <br>
+    <br>
+    <h4>THINGS YOU SHOULD FIX</h4>
+    <ul class="list-unstyled">
+      <li style="padding-left:2em" *ngFor="let test of goodPassTests">
+        <p *ngIf="test.status == false">{{test.title}}    &#10008;</p>
+      </li>
+    </ul>
   </div>
 </div>
